# game-of-life-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  cli.yaml  game.rs  main.rs  utils.rs
