[package]
name = "game-of-life-rs"
version = "0.1.0"
authors = ["Sameer Kolhar <kolhar730@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm =  "0.19.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
